crates/astria-celestia-jsonrpc-client/k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: astria-celestia-jsonrpc-client-test
spec: 
  selector:
    app.kubernetes.io/name: astria-celestia-jsonrpc-client-test
  ports:
    - name: bridge-rest
      port: 26659
      targetPort: bridge-rest
    - name: bridge-jsonrpc
      port: 26658
      targetPort: bridge-jsonrpc
