crates/astria-celestia-jsonrpc-client/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astria-celestia-jsonrpc-client-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules: 
  - host: astria-celestia-jsonrpc-client-test.localdev.me
    http:
      paths:
        - path: /bridge/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: astria-celestia-jsonrpc-client-test
              port:
                name: bridge-rest
        - path: /jsonrpc/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: astria-celestia-jsonrpc-client-test
              port:
                name: bridge-jsonrpc
---
